# Accepted--lab-2--variant-2

./: README.md  compare.md  dynamic_array.py  pyproject.toml  test_dynamic_array.py
